# sutton-rl-introduction

./: .flake8  .gitignore  CLAUDE.md  LEARNING_PROGRESS.md  PROJECT_STRUCTURE.md  README.md  fix_all_chapter_imports.py  fix_imports.py  fix_relative_imports.py  fix_test_imports.py  main.py  pyproject.toml  setup.cfg  test_all_chapters.py
src/: textbook_navigation.py
src/00_preface/: __init__.py  what_is_rl.py
src/ch01_bandits/: bandit_introduction.py  run_chapter1.py
src/ch01_introduction/: __init__.py  history_and_concepts.py  rl_fundamentals.py  test_chapter1.py  tic_tac_toe.py
src/ch02_mdp/: __init__.py  agent_environment_interface.py  mdp_framework.py  policies_and_values.py
src/ch02_multi_armed_bandits/: CHAPTER2_SUMMARY.md  __init__.py  bandit_introduction.py  epsilon_greedy.py  gradient_bandit.py  test_chapter2.py  ucb_algorithm.py
src/ch03_dynamic_programming/: __init__.py  dp_examples.py  dp_foundations.py  test_chapter3.py
src/ch03_finite_mdp/: CHAPTER2_SUMMARY.md  gridworld.py  test_chapter3.py
src/ch04_dynamic_programming/: README.md  __init__.py  dp_examples.py  dp_foundations.py  generalized_policy_iteration.py  policy_iteration.py  test_chapter4.py  value_iteration.py
src/ch04_monte_carlo/: README.md  importance_sampling.py  mc_control.py  mc_examples.py  mc_foundations.py  mc_prediction.py  test_chapter4.py
src/ch05_monte_carlo/: __init__.py  importance_sampling.py  mc_control.py  mc_examples.py  mc_foundations.py  mc_prediction.py  test_chapter5.py
src/ch05_temporal_difference/: n_step_td.py  td_foundations.py  test_chapter5.py
src/ch06_td_lambda/: eligibility_traces.py  td_lambda_control.py  td_lambda_prediction.py  test_chapter6.py  true_online_td_lambda.py
src/ch06_temporal_difference/: n_step_td.py  td_control.py  td_foundations.py  test_chapter6.py
src/ch07_n_step_bootstrapping/: __init__.py  n_step_sarsa.py  n_step_td.py  off_policy_n_step.py  test_chapter7.py  tree_backup.py
src/ch08_planning_and_learning/: __init__.py  dyna_q.py  expected_vs_sample.py  mcts.py  models_and_planning.py  prioritized_sweeping.py  test_chapter8.py  trajectory_sampling.py
src/ch09_on_policy_approximation/: __init__.py  feature_construction.py  gradient_descent.py  least_squares_td.py  linear_approximation.py  neural_approximation.py  test_chapter9.py
src/ch10_on_policy_control_approximation/: __init__.py  continuous_tasks.py  control_with_fa.py  episodic_semi_gradient.py  test_chapter10.py
src/ch11_off_policy_approximation/: __init__.py  emphatic_td.py  gradient_td.py  importance_sampling.py  test_chapter11.py
src/ch12_eligibility_traces/: __init__.py  control_traces.py  lambda_return.py  td_lambda.py  test_chapter12.py
src/ch13_policy_gradient/: __init__.py  actor_critic.py  natural_policy_gradient.py  policy_gradient_theorem.py  reinforce.py  test_chapter13.py
src/configs/: config.yaml
src/configs/experiment/: chapter1.yaml  preface.yaml
src/preface/: __init__.py  core_concepts.py  rl_fundamentals.py  run_preface.py  tictactoe.py
src/src/ch01_introduction/: tic_tac_toe_textbook.py
src/src/ch03_finite_mdp/: mdp_textbook.py
(+4 files in other folders)
