[project]
name = "sutton-rl"
version = "0.1.0"
description = "Sutton & Barto强化学习导论 - 超细粒度代码实现"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "hydra-core>=1.3.0",
    "omegaconf>=2.3.0",
    "pandas>=2.0.0",
    "tqdm>=4.65.0",
    "seaborn>=0.12.0",
    "scipy>=1.10.0",
]
