[metadata]
name = sutton-rl
version = 0.1.0
description = Sutton & Barto Reinforcement Learning Implementation

[options]
python_requires = >=3.11
packages = find:
package_dir =
    = src

[options.packages.find]
where = src

[flake8]
max-line-length = 120
extend-ignore = E203, E266, E501, W503, F401, F841
exclude = .git,__pycache__,.venv,venv,build,dist,*.egg-info,outputs
per-file-ignores =
    __init__.py:F401
    run_*.py:F841

[mypy]
python_version = 3.11
warn_return_any = True
warn_unused_configs = True
ignore_missing_imports = True

[pycodestyle]
max-line-length = 120
ignore = E203, E266, E501, W503

[pydocstyle]
ignore = D100,D101,D102,D103,D104,D105,D106,D107